change iPhone png

--- a/_sass/_devices.scss
+++ b/_sass/_devices.scss
@@ -21,7 +21,7 @@
 .device.iphone-se-silver-vertical {
   width: 288px;
   height: 608px;
-  background-image: url(http://i1.hoopchina.com.cn/blogfile/201608/03/BbsImg14701571435441_576x1216.png);
+  background-image: url(http://wx1.sinaimg.cn/large/006p1Rrsgy1fewzl3awpcj30g00xsgpx.jpg);
 }
 .device.iphone-se-silver-vertical .app-screenshot {
   top: 91px;
